<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_biography"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/titleColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btnHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:insetTop="8dp"
            android:insetBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnContact"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:insetTop="8dp"
            android:insetBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toEndOf="@id/btnHobbies"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:backgroundTint="@color/buttonColor" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:paddingTop="16dp"
            android:textSize="16sp"
            android:lineSpacingExtra="2dp"
            app:layout_constraintTop_toBottomOf="@id/btnHobbies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>